--- a/manifest.json
+++ b/manifest.json
@@ -12,7 +12,7 @@
         "https://jenkins.ci.cloudbees.com/*",
         "http://localhost:8080/*"
       ],
-      "css": ["doony.min.css"],
+      "css": ["doony.css"],
       "js": ["src/vendor/jquery-2.0.3.js", "doony.js"]
     }
    ]
